# crosscord

./: .gitmodules  CMakeLists.txt  GenProj.bat  README.md
.github/workflows/: build.yml
resources/: icon.psd  resources.rc
src/crosscord/: config.cpp  config.h  crosshair.cpp  crosshair.h  defines.h  gl.cpp  gl.h  globals.h  main.cpp  modules.cpp  modules.h  overlay.cpp  overlay.h  tray.cpp  tray.h  ui.cpp  ui.h
src/crosscord/modules/: config.cpp  config.h  crosshair.cpp  crosshair.h  gl.cpp  gl.h  overlay.cpp  overlay.h  tray.cpp  tray.h  ui.cpp  ui.h
src/crosscord/util/: callbacks.cpp  callbacks.h  log.cpp  log.h  macros.h
submodules/: CMakeLists.txt
